<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

  <item
      android:id="@+id/action_settings"
      android:title="@string/settings"
      android:orderInCategory="100"
      app:showAsAction="never">
  </item>

  <item
      android:id="@+id/action_change_book"
      android:title="@string/change_book"
      android:orderInCategory="110"
      app:showAsAction="never">
  </item>

  <item
      android:id="@+id/action_order_book"
      android:title="@string/order_book"
      android:orderInCategory="120"
      app:showAsAction="never">
  </item>

  <item
      android:id="@+id/action_logout"
      android:title="@string/logout"
      android:orderInCategory="130"
      app:showAsAction="never">
  </item>

</menu>