<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp">

    <TextView
        android:id="@+id/tv_alertdialog_headline"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="sans-serif"
        android:padding="@dimen/_8sdp"
        android:text="@string/dialogHeadline"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_ad_ok"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif"
        android:text="@string/b_create"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alertdialog_headline" />

    <Button
        android:id="@+id/b_ad_cancel"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif"
        android:text="@string/b_cancel"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/b_ad_ok"
        app:layout_constraintTop_toBottomOf="@+id/tv_alertdialog_headline" />
</androidx.constraintlayout.widget.ConstraintLayout>