<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.ScrollView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/background_wol"
      tools:context="de.kd_softworx.ls_babyalbum.RegisterActivity">

    <TextView
        android:id="@+id/reg_Titel_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_reg_Titel_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_username_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_Titel_1"
        android:layout_alignStart="@id/reg_Titel_1"
        android:layout_alignLeft="@+id/reg_Titel_1"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Username"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegUsername"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:ems="20"
          android:fontFamily="sans-serif"
          android:inputType="textCapSentences"
          android:lines="1"
          android:maxLength="20"
          android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_username_text_input"
        android:layout_alignStart="@+id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Passwort"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textPassword"
          android:lines="1"
          android:maxLength="20"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_confPassword_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password_text_input"
        android:layout_alignStart="@+id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Conf_Passwort"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegConfPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textPassword"
          android:lines="1"
          android:maxLength="20"
          android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/reg_Titel_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_confPassword_text_input"
        android:layout_alignLeft="@id/reg_Titel_1"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_reg_Titel_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/reg_rbSalutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_Titel_2"
        android:layout_alignStart="@+id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

      <RadioButton
          android:id="@+id/rbRegMale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:buttonTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:onClick="onRadioButtonClicked"
          android:text="@string/tv_Salutation_Mr"
          android:textColor="@color/colorAccent" />

      <RadioButton
          android:id="@+id/rbRegFemale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50sp"
          android:buttonTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:onClick="onRadioButtonClicked"
          android:text="@string/tv_Salutation_Mrs"
          android:textColor="@color/colorAccent" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_rbSalutation"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Name"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textCapSentences"
          android:lines="1"
          android:maxLength="20"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_surname_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_name_text_input"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Surname"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegSurname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textCapSentences"
          android:lines="1"
          android:maxLength="20"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_dateOfBirth_text_input"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_surname_text_input"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_DateOfBirth"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegShowDatePicker"
          android:layout_width="125dp"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:ems="5"
          android:focusable="false"
          android:fontFamily="sans-serif"
          android:inputType="none"
          android:lines="1"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_street_text_input"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_dateOfBirth_text_input"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Street"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegStreet"
          android:layout_width="210dp"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textCapSentences"
          android:lines="1"
          android:maxLength="35"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_houseNumer_text_input"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_dateOfBirth_text_input"
        android:layout_alignBaseline="@+id/reg_street_text_input"
        android:layout_alignEnd="@+id/reg_username_text_input"
        android:layout_alignRight="@+id/reg_username_text_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="1dp"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegHouseNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignTop="@+id/reg_houseNumer_text_input"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="number"
          android:lines="1"
          android:maxLength="5"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_postcode_text_input"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_street_text_input"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/tv_PostCode"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegPostcode"
          android:layout_width="70dp"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="number"
          android:lines="1"
          android:maxLength="6"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_location_text_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_street_text_input"
        android:layout_alignBaseline="@+id/reg_postcode_text_input"
        android:layout_alignEnd="@+id/reg_houseNumer_text_input"
        android:layout_alignRight="@+id/reg_houseNumer_text_input"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:hint="@string/tv_Location"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegLocation"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textCapSentences"
          android:lines="1"
          android:maxLength="35"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_postcode_text_input"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Email"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="textEmailAddress"
          android:lines="1"
          android:maxLength="35"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_phone_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email_text_input"
        android:layout_alignStart="@id/reg_username_text_input"
        android:layout_alignLeft="@+id/reg_username_text_input"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/tv_Phone"
        app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etRegPhone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/colorPrimaryDark"
          android:fontFamily="sans-serif"
          android:inputType="phone"
          android:lines="1"
          android:maxLength="20"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_below="@+id/reg_phone_text_input"
        android:layout_alignEnd="@+id/reg_phone_text_input"
        android:layout_alignRight="@+id/reg_phone_text_input"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif"
        android:text="@string/b_Register"
        android:textStyle="bold" />

  </RelativeLayout>


</ScrollView>
